# Print-Doctor

./: .gitignore  README.md  build_macos.sh  pyproject.toml  run.sh
.github/workflows/: release.yml  test.yml
resources/: entitlements.plist  icon.icns
scripts/: notarize_app.sh  sign_app.sh
src/stl_repair/: __main__.py  app.py  process_worker.py  repair.py  worker.py
tests/: test_repair_smoke.py
